infrastructure/controllers/cnpg.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
  labels:
    toolkit.fluxcd.io/tenant: dev-team
