infrastructure/controllers/metallb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    toolkit.fluxcd.io/tenant: dev-team
