infrastructure/controllers/traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    toolkit.fluxcd.io/tenant: dev-team
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
