infrastructure/controllers/weave-gitops.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitops
  namespace: flux-system
spec:
  ingressClassName: pomerium
  rules:
  - host: gitops.int.glencook.tech
    http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: weave-gitops
              port: 
                number: 9001
